# galette

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile.toml  README.md  future-improvements.md  o.txt  rustfmt.toml  veth-live.sh  veth.sh
chainsmith/: Cargo.toml
chainsmith/include/: Cargo.user.in.toml  Cargo.xdp.in.toml  lib.in.rs  xdp_wrapper.in.rs  xdp_wrapper_chain.in.rs
chainsmith/src/: chain.rs  config.rs  error.rs  lib.rs  main.rs
crp/: Cargo.toml
crp/src/: lib.rs
examples/: temp.md
examples/01-macswap-xdp/: chain.toml
examples/02-macswap-and-ttl-xdp/: chain.toml  decrement-ip-ttl-chain.elf
examples/03-branch/: chain.toml
examples/04-basic-map/: chain.toml
examples/05-upcall/: chain.toml
examples/06-macswap-lb/: chain.toml
examples/07-compute-heavy-userland/: chain.toml
examples/08-compute-heavy-kernel/: chain.toml
examples/09-userland-1ms-process/: chain.toml
examples/10-moderate-lb/: chain.toml
examples/11-light-lb/: chain.toml
examples/functions/compute-heavy/: Cargo.toml
examples/functions/compute-heavy-xdp/: Cargo.toml
examples/functions/compute-heavy-xdp/src/: lib.rs
examples/functions/compute-heavy/src/: lib.rs
examples/functions/compute-light/: Cargo.toml
examples/functions/compute-light/src/: lib.rs
examples/functions/compute-moderate/: Cargo.toml
examples/functions/compute-moderate/src/: lib.rs
examples/functions/decrement-ip-ttl/: Cargo.toml
examples/functions/decrement-ip-ttl/src/: lib.rs
examples/functions/dest-ip-branch/: Cargo.toml
examples/functions/dest-ip-branch/src/: lib.rs
examples/functions/filter-ip/: Cargo.toml
examples/functions/filter-ip/src/: lib.rs
examples/functions/load-balance/: Cargo.toml
examples/functions/load-balance/src/: lib.rs
examples/functions/macswap/: Cargo.toml
examples/functions/macswap/src/: lib.rs
examples/functions/no-op/: Cargo.toml
examples/functions/no-op/src/: lib.rs
nf/: Cargo.toml  README.md
nf-macros/: Cargo.toml
nf-macros/src/: lib.rs
nf/src/: example_map.rs  lib.rs  map.rs  packet.rs  random.rs
protocol/: Cargo.toml
protocol/src/: chain.rs  error.rs  function.rs  keys.rs  lib.rs  message.rs
pulley/: Cargo.toml
pulley/src/: config.rs  error.rs  lib.rs  main.rs  prog.rs
support-files/: .config  README.md  install-cross-deps.sh  vmlinux
