[package]
name = "chainsmith"
authors = ["Kyle Simpson <kyleandrew.simpson@gmail.com>"]
description = "Compiler server for XDP function chains on low-power SBC nodes."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "error-context", "help", "usage", "wrap_help"] }
convert_case = "0.5"
crp = { version = "0.1", path = "../crp" }
futures-util = "0.3"
phf = { version = "0.11", features = ["macros"] }
postcard = { features = ["alloc", "use-std"], version = "1" }
protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
syn = { version = "1", features = ["full"] }
thiserror = "1"
tokio = { version = "1", default-features = false, features = ["fs", "io-std", "macros", "net", "process", "rt-multi-thread", "time"] }
tokio-rustls = { features = ["dangerous_configuration"], version = "0.23" }
toml = "0.5"
tokio-tungstenite = "0.17"
uuid = { version = "1", features = ["v4"] }
