[package]
name = "nf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nf-macros = { path = "../nf-macros" }
rand = { version = "0.8", optional = true, default-features = false }

[dependencies.libbpf-rs]
optional = true
# version = "0.18"
# path = "/home/kyles/gits/libbpf-rs/libbpf-rs"
git = "https://github.com/libbpf/libbpf-rs/"
rev = "362a0a09af785a692c8d9d66dfb71f7779099bd7"

[dependencies.redbpf-probes]
optional = true
#version = "2.3.0"
git = "https://github.com/FelixMcFelix/redbpf"
branch = "lbpf-v0.8"
# path = "/home/kyles/gits/redbpf/redbpf-probes"

[dependencies.libbpf-sys]
optional = true
version = "0.8.3+v0.8.1"
# version = "1.0.0"
#features = ["bindgen"]
#path = "/home/kyles/gits/"

[features]
xdp = ["redbpf-probes"]
user = ["libbpf-rs", "libbpf-sys", "rand/default"]

[dev-dependencies]
