[package]
name = "dest-ip-branch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
xdp = ["nf/xdp"]
user = ["nf/user"]

[dependencies]
# pnet = { git = "https://github.com/FelixMcFelix/libpnet", branch = "undo-toml-modernisation", default_features = false }
nf = { path = "../../../nf" }

[workspace]
